--- a/goatvision/index.html
+++ b/goatvision/index.html
@@ -9,7 +9,7 @@
         <canvas id='canvas' width="1600" height="700"></canvas>
         <br>
         <br>
-        <audio src="assets/sample.mp3" id="audio" controls>audio element not supported</audio>
+        <audio id="audio" controls>audio element not supported</audio>
         <script src="main.js"></script>
         <a id="back" href="http://www.goatify.me">Back to Goatify!</a>
         <a id="download">Download</a>
