Commiting some random changes, not sure if this is actually working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>GOATIFY ME</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="goats.css">
-    <script src="goats.js"></script>
   </head>
 
 	<body> 
@@ -20,20 +19,21 @@
             <img src="https://s-media-cache-ak0.pinimg.com/originals/bb/27/b8/bb27b8ea74547bc25bcf2fcf1db8f2de.jpg" alt="">
         </div>
         </div>
-	    <form action="https://midibucket.s3.amazonaws.com/" method="post" enctype="multipart/form-data">
-			<input id="key" type="hidden" name="key" value="${filename}"> 
+	    <form action="./upload.php" method="post" enctype="multipart/form-data">
+			<input id="key" type="hidden" name="key" value="${filename}">
 			 <input type="hidden" name="acl" value="public-read-write"> 
-			 <input type="hidden" name="success_action_redirect" value="https://upload.wikimedia.org/wikipedia/commons/f/ff/Domestic_goat_kid_in_capeweed.jpg">
 			 <input type="hidden" name="Content-Type" value="audio/midi">
 			 <!-- Include any additional input fields here -->
 
             <div id="fileinput">
             <span id="miditext" >Upload MIDI here: </span>
-			<input id="midibutton" name="file" type="file"> 
+			<input id="midibutton" name="midifile" type="file"> 
             </div>
 			<br> 
 			<input id="submitbutton" type="submit" value="GOATIFY ME">
 		</form>
         <p>A ridiculous hackathon project by Sloan Nietert, Gordon Zhang, Trevor Shibley, and Cody McKee.</p>
 	</body>
+
+    <script src="goats.js"></script>
 </html>
